hphp/hack/test/typecheck/expression_trees/class_const.php.exp
File "class_const.php", line 9, characters 10-29:
Expression trees do not support directly referencing class consts. Consider splicing values defined outside the scope of an Expression Tree using ${...}. (Parsing[1002])
