hphp/hack/test/typecheck/expression_trees/class_const.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

final class MyTestClass {
  const MYCONST = 'Hello';

  public function test(): void {
    ExampleDsl`MyTestClass::MYCONST`;
  }
}
